tests/ui/repr/repr-c-dead-variants.armebv7r-none-eabi.stderr
error: layout_of(Univariant) = Layout {
           size: Size(1 bytes),
           align: AbiAlign {
               abi: Align(1 bytes),
           },
           backend_repr: Scalar(
               u8 is 0..=0,
           ),
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: u8,
                   valid_range: 0..=0,
               },
           ),
           uninhabited: true,
           variants: Multiple {
               tag: u8 is 0..=0,
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(1 bytes),
                       backend_repr: Scalar(
                           u8 is 0..=0,
                       ),
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       largest_niche: None,
                       uninhabited: true,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(1 bytes),
           repr_c: true,
           randomization_seed: $SEED,
       }
  --> $DIR/repr-c-dead-variants.rs:44:1
   |
LL | enum Univariant {
   | ^^^^^^^^^^^^^^^

error: layout_of(TwoVariants) = Layout {
           size: Size(2 bytes),
           align: AbiAlign {
               abi: Align(1 bytes),
           },
           backend_repr: ScalarPair {
               a: u8 is 0..=1,
               b: union u8,
               b_offset: Size(1 bytes),
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: u8,
                   valid_range: 0..=1,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: u8 is 0..=1,
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: ScalarPair {
                           a: u8 is 0..=1,
                           b: union u8,
                           b_offset: Size(1 bytes),
                       },
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       largest_niche: None,
                       uninhabited: true,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: ScalarPair {
                           a: u8 is 0..=1,
                           b: union u8,
                           b_offset: Size(1 bytes),
                       },
                       field_offsets: [
                           Size(1 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       largest_niche: None,
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(1 bytes),
           repr_c: true,
           randomization_seed: $SEED,
       }
  --> $DIR/repr-c-dead-variants.rs:51:1
   |
LL | enum TwoVariants {
   | ^^^^^^^^^^^^^^^^

error: layout_of(DeadBranchHasOtherField) = Layout {
           size: Size(16 bytes),
           align: AbiAlign {
               abi: Align(8 bytes),
           },
           backend_repr: Memory {
               sized: true,
           },
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: u8,
                   valid_range: 0..=1,
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: u8 is 0..=1,
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(16 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(8 bytes),
                           Size(8 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                           1,
                       ],
                       largest_niche: None,
                       uninhabited: true,
                   },
                   VariantLayout {
                       size: Size(16 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [
                           Size(8 bytes),
                       ],
                       fields_in_memory_order: [
                           0,
                       ],
                       largest_niche: None,
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: Some(
               Align(8 bytes),
           ),
           unadjusted_abi_align: Align(8 bytes),
           repr_c: true,
           randomization_seed: $SEED,
       }
  --> $DIR/repr-c-dead-variants.rs:63:1
   |
LL | enum DeadBranchHasOtherField {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

